--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,3 +28,9 @@ $link-color: #841212;
 @import "ed";
 @import "syntax";
 @import "CETEIcean.css";
+
+
+#image-gallery { 
+  width: 600px; 
+  margin: 0 auto;
+}
